--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
 <h1>default home</h1>
 <% @projects.each do |project| %>
-  <h2> <%= project.title %> </h2>
-  <p> <%= project.description %> </p>
+  <h2><%= link_to project.title, project_path(project.id)%></h2>
   <p> <%= project.created_at.strftime("%Y-%b-%d") %></p>
+  <p> <%= project.description %> </p>
   <hr>
 <% end %>
 </div>
