--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -9,7 +9,7 @@
         <%= f.label :description, "Project Description" %>
         <%= f.text_area :description, class: "form-control", rows: "5", style: "resize: none;" %>
       </div>
-      <%= f.submit "Create Project", class: "btn btn-default" %>
+      <%= f.submit "Save", class: "btn btn-default" %>
     <% end %>
   </div>
 </div>
