--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -6,7 +6,7 @@
     <div class="col-md-3 heading">
       <%= link_to "Edit", edit_project_path(project.id), class: "btn btn-default" %>
       <%= button_to 'Delete', project_path(project.id),
-          method: "delete", class: "btn btn-danger", confirm: 'Are you use you want to delete this project' %>
+          method: "delete", class: "btn btn-danger", confirm: 'Are you use you want to delete this project?' %>
     </div>
   </div>
   <div class="row">
