update controller to optimize codes by implement  have before_action

--- a/app/assets/stylesheets/bootstrap_overide.css.scss
+++ b/app/assets/stylesheets/bootstrap_overide.css.scss
@@ -35,4 +35,4 @@
   padding: 10px 0;
 }
 
-.col-md-3.heading .btn{ float: right; margin-left: 10px; }
+.col-md-3.heading .btn{  margin-left: 10px; }
