--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,9 +4,9 @@
   <div class="row">
     <div class="col-md-9"><h2><%= link_to project.title, project_path(project.id) %></h2></div>
     <div class="col-md-3 heading">
-      <%= link_to "Edit", edit_project_path(project.id), class: "btn btn-default" %>
-      <%= button_to 'Delete', project_path(project.id),
-          method: "delete", class: "btn btn-danger", confirm: 'Are you use you want to delete this project?' %>
+      <%= link_to "Edit", edit_project_path(project), class: "btn btn-default pull-right" %>
+      <%= button_to 'Delete', project,
+          method: :delete, class: "btn btn-danger pull-right", confirm: 'Are you sure you want to delete this project?' %>
     </div>
   </div>
   <div class="row">
