--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#search-form{ margin-bottom: 10px; height: auto; width: 100%;}
+#term{ width: 300px; margin-right: 10px; float: left;}
